symbol search screenshot

--- a/style/main.css
+++ b/style/main.css
@@ -31,3 +31,8 @@ pre { background: #000; color: #fff; padding: 15px;}
 hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
 
 .footer { text-align:center; padding-top:30px; font-style: italic; }
+
+.gallery-thumbnail {
+    width: 272px;
+    height: 272px;
+}
